test/errors/pass_toplevel.luv
# RET: 1
# ERR: {self}:4:1:pass
# ERR: {ssss}     ^ error: pass statement not allowed at top level.
pass
